# tdsql-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: architecture.md
skills/teradata-sql-analytics/: README.md  SKILL.md  syntax
skills/teradata-sql-analytics/.claude-plugin/: plugin.json
skills/teradata-sql-analytics/syntax/: aggregate-functions.md  ai-text-analytics.md  authorization-objects.md  bit-byte-functions.md  catalog-views.md  conditional.md  data-types-casting.md  date-time.md  embeddings.md  guidelines.md  index.md  llm-providers.md  ml-functions.md  numeric-functions.md  open-table-format.md  sql-basics.md  string-functions.md  syntax  text-analytics.md  uaf-concepts.md  uaf-data-prep.md  uaf-diagnostics.md  uaf-formula-rules.md  utility-functions.md  vector-search.md  window-functions.md
src/tdsql_mcp/: server.py  syntax
src/tdsql_mcp/syntax/: authorization-objects.md  catalog-views.md  data-exploration.md  data-prep.md  data-types-casting.md  guidelines.md  index.md  json-functions.md  ml-functions.md  object-store.md  query-tuning.md  sql-basics.md  string-functions.md  uaf-concepts.md  uaf-utility.md  vector-search.md
