[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tdsql-mcp"
version = "1.1.1"
description = "MCP server for Teradata Vantage — SQL execution and native analytics function reference for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Kevin Sturgeon", email = "ksturgeon@gmail.com" },
]
keywords = ["mcp", "teradata", "vantage", "sql", "analytics", "llm", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "teradatasql>=20.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ksturgeon-td/tdsql-mcp"
Repository = "https://github.com/ksturgeon-td/tdsql-mcp"
"Bug Tracker" = "https://github.com/ksturgeon-td/tdsql-mcp/issues"

[project.scripts]
tdsql-mcp = "tdsql_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tdsql_mcp"]
